# fastapi-template

./: main.py  pyproject.toml
