[tool.poetry]
name = "fastapi-template"
version = "0.0.1"
authors = [
  "Jacopo Margutti <jmargutti@redcross.nl>"
]
description = "FastAPI template"
readme = "README.md"
repository = "https://github.com/jmargutt/fastapi-template"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
python-dotenv = "*"
uvicorn = "*"
random2 = "^1.0.2"
datetime= "^5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"